# 4web_maintenance_native

./: .gitignore  README.Docker.md  README.md  compose.yaml  readme  readme.md  start.bat  start.ps1  start.sh
backend/: .gitignore  Dockerfile  app.py  app_factory.py  compose.yaml  compose.yml  config.py  containers.py  dump.rdb  inspector.py  main.py  pyproject.toml  readme  requirements.txt
backend/app/: base_use_case.py
backend/app/auther/: auth.py
backend/app/machines/: __init__py  controller.py  schemas.py
backend/app/machines/models/: __init__py  schemas.py
backend/app/machines/use_cases/: delete_machines_use_case.py  (+2 more)
backend/app/maintenance/: controller.py  schemas.py
backend/app/models/: schemas.py
backend/app/parts/: schemas.py
backend/app/redis_setting/: redis_pool.py
backend/app/routes/: machines.py  maintenance.py  parts.py  teams.py  users.py
backend/app/teams/: controller.py  schemas.py
backend/app/tests/: __init__.py  test_carga.py  teste.py
backend/app/tools/: controller.py
backend/app/user/: schemas.py
backend/app/users/: controller.py
backend/helpers/adapters/: auth_adapter.py
backend/infrastructure/: logger.py
backend/infrastructure/broker/: async_kafka.py  consumer.py  interface.py  producer.py
backend/infrastructure/database/: database.py  mongo_database.py  postgres_database.py
backend/migrations/: env.py
backend/models/nosql/: machines.py
backend/models/sql/: machines.py
backend/repositories/: base_repository.py
backend/repositories/nosql/: machines_repository.py
backend/repositories/sql/: machines_repository.py
backend/services/: machines_service.py  maintenance_service.py
backend/tests/: test_carga.py  test_unitarios.py
(+116 files in other folders)
