[tool.poetry]
name = "backend"
version = "0.1.0"
description = "4web_maintenance_native"
authors = ["Vincenzo140 <vincenzo.amendola141@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.88.0"
redis = "^4.3.4"
uvicorn = "^0.20.0"
rich = "^13.9.4"
tenacity = "^9.0.0"
dependency-injector = "^4.43.0"
passlib = "^1.7.4"
python-jose = "^3.3.0"
python-multipart = "^0.0.17"
matplotlib = "^3.9.2"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"